tests/fail/elaboration/mismatched-array-length/array64.snap
stdout = ''
stderr = '''
error: mismatched array length
  ┌─ tests/fail/elaboration/mismatched-array-length/array64.fathom:3:1
  │
3 │ [1, 2, 3, 42] : Array64 3 U32
  │ ^^^^^^^^^^^^^ array with invalid length
  │
  = expected length 3
  =    found length 4

'''
